fix x overflow

--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -3,9 +3,7 @@
 
 .hero-section {
   padding-top: variables.$navbar-height;
-  background: blue;
   height: auto;
-  width: 100vw;
   background: linear-gradient(120.46deg, variables.$light-blue 11.97%, variables.$dark-blue 70.13%);
   margin-top: - variables.$navbar-height;
   position: relative;
